--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     </header>
     <section class="banner">
         <div class="banner-main-content">
+            <div></div>
             <h2>GET THE WORLD'S LATEST NEWS</h2>
             <h3>World's Leading News Portal</h3>
 
