--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Hellop 123-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -137,7 +137,7 @@
                         <a href="#">Read More<span>>></span></a>
                         </div>
                     </article>
-                
+
 
                 <article>
                     <img src="images/bottom-left-2.jpg">
@@ -235,7 +235,7 @@
                         <a href="#">Read More<span>>></span></a>
                     </div>
                     <img src="images/right-5.jpg">
-                </article>  
+                </article>
             </section>
 
         </main>
@@ -249,7 +249,7 @@
                 <div class = "footer-right">
                     <h2>Newletter</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, autem!</p>
-    
+
                     <div>
                         <input type = "text" placeholder = "Email Address">
                         <i class = "fas fa-envelope"></i>
