--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 
 <body>
     <!-- header -->
+    <script async 
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633547947040128"
+     crossorigin="anonymous"></script>
+<!-- test_add -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8633547947040128"
+     data-ad-slot="3895401685"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+    <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <header>
         <div class="navigation-container">
             <div class="top-head">
