script added in head

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         rel="stylesheet">
     <!-- icons fontawesome  -->
     <script src="https://kit.fontawesome.com/53dc7b49a9.js" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8633547947040128"
+     crossorigin="anonymous"></script>
     <title>NEWS</title>
 </head>
 
